.vuepress/styles/index.styl
@require '~vuepress-plugin-tabs/dist/themes/default.styl'

// temporary for v3
// .nav-item>a.router-link-active, .nav-item>a:hover
//     color inherit !important


/* Open Sans font weights 300-400 */
/* latin-ext */
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 300;
  src: local('Open Sans Light'), local('OpenSans-Light'), url(/fonts/mem5YaGs126MiZpBA-UN_r8OXOhpOqc.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 300;
  src: local('Open Sans Light'), local('OpenSans-Light'), url(/fonts/mem5YaGs126MiZpBA-UN_r8OUuhp.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}
/* latin-ext */
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 400;
  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(/fonts/mem8YaGs126MiZpBA-UFW50bbck.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}
/* latin */
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 400;
  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(/fonts/mem8YaGs126MiZpBA-UFVZ0b.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

.navbar:not(.headroom--top):not(.transparent)
    box-shadow rgba(10%,10%,10%,25%) 0 0 10px

@media (prefers-color-scheme: light)
    .navbar:not(.headroom--top):not(.transparent)
        background-color rgba(250,250,252,0.9) !important

.homepage
    .navbar:not(.ready)
      opacity 0
      background transparent
      color white

      border-bottom none
      box-shadow none
      .logo
        opacity 0
      .nav-dropdown
        color black
      .nav-links > .nav-item:last-child
        svg
            color white
      .dropdown-title .arrow
          border-top 6px solid #fff


@media (min-width: 860px)
    html
        font-size: .938em
    .navbar
        padding: calc(.7rem * 16 / 14) calc(1.5rem * 16 / 14) !important
        line-height: calc(2.2rem * 16 / 14) !important
        height: calc(3.6rem * 16 / 14) !important
        .logo
            height: calc(2.2rem * 16 / 14) !important
            min-width: calc(2.2rem * 16 / 14) !important
            margin-right: calc(.8rem * 16 / 14) !important
            width: inherit // !important
        .nav-links a
            line-height calc(1.4rem * 16 / 14) !important
            font-size 16px !important
    .sidebar
        top calc(3.6rem * 16 / 14) !important

.navbar
    .links
        background-color transparent !important

    .nav-dropdown
        // background-color white
        box-shadow rgba(10%,10%,10%,25%) 0 0 5px
    
    .nav-item a
        // font-family 'Open Sans', sans-serif
        font-weight 400
        font-size 1rem

    .nav-item .dropdown-title
        // font-family 'Open Sans', sans-serif
        font-weight 400
        font-size 1rem
        color inherit !important

    .dropdown-subitem .nav-link a
        font-weight normal

    .site-name
        display none

.dropdown-wrapper .nav-dropdown .dropdown-item h4
    margin-bottom .2rem

.sidebar-group.is-sub-group>.sidebar-heading:not(.clickable)
  opacity 1 !important

.arrow.right
  border-left: 6px solid #333 !important

.sidebar
    background-color #f7f7f7 !important
    z-index 15
    // background linear-gradient(90deg, #fff0e0, #fff) !important
    .nav-item .mobile-dropdown-title
        line-height calc(1.4rem * 16 / 14) !important
        font-size 16px !important
    .page-versions .dropdown-wrapper
        z-index 9999

@media (min-width: 719px)
    .nav-item > a:hover, .nav-item > a.router-link-active
        border-bottom 3px solid $accentColor

@media (min-width: 720px) and (max-width: 1023px)
    .search-box input:focus
        width: 10.8rem !important // to cover the openHAB text (leaving the logo)

@media (min-width: 1024px) and (max-width: 1280px)
    .search-box input
        width: 5.7rem !important

@media (max-width: 360px)
    .search-box input:focus
        width: 9.4rem !important // to cover the openHAB text (leaving the logo)

@media (max-width: 419px)
    .search-box input:focus
        width: 4rem !important

.theme-default-content:not(.custom)>h1:first-child
    font-family 'Open Sans', sans-serif
    font-weight 400

@media print
    .navbar
        display none
    .page-versions
        display none
    .page-nav
        display none
    .editLink
        display none
    .theme-default-content pre
        overflow hidden !important
        white-space pre-wrap !important

.theme-container:not(.homepage) .theme-default-content:not(.custom), .page-nav
    max-width 1280px !important
.theme-container.homepage .theme-default-content:not(.custom)
    max-width 100% !important

.page .theme-default-content:not(.custom):not(.page-nav):not(.edit-link)
    min-height 85vh !important

.page .page-edit
    display none

a[href*='.openhab.org'] .outbound
        display none

.nav-item > a.external:hover
    border-bottom 2px solid #ff7214

.custom-block.tip
    border-color #2196f3 !important

/* Tweaks for vuepress-plugin-tabs */

.vuepress-tabs
    .tabs-component
        .tabs-component-tab.is-active .tabs-component-tab-a
                color black
        .tabs-component-panel
            margin-top -8.4rem
            padding-top 8.4rem

@media (min-width: 700px)
    .vuepress-tabs
        .tabs-component-tab
            border solid 1px #bbb
            &.is-active
                border-bottom solid 1px #fff
                z-index 2
                transform translateY(0)
        .tabs-component-panels
            border solid 1px #bbb

@media (max-width: 699px)
    .vuepress-tabs
        .tabs-component-tabs
            border 0
            align-items center
            display flex
            justify-content flex-start
            margin-bottom -2px
            padding-left -1rem
        .tabs-component-tab
            background-color #fff
            border solid 1px #bbb
            border-radius 3px 3px 0 0
            margin-right .25em
            transition transform .3s ease
            &.is-active
                border-bottom solid 1px #fff
                z-index 2
                transform translateY(0)
        .tabs-component-panels
            background-color #fff
            border-top solid 1px #bbb
            padding-top 0
            margin-top 1px


/*** DARK MODE 😎 ***/

@media (prefers-color-scheme: dark)
    :root
        color-scheme dark
    html, body
        background-color rgb(17, 17, 17)
        color rgb(221, 221, 221)
    .navbar
        background-color rgba(0, 0, 0, 0.9) !important
        border-bottom 1px solid rgb(68, 68, 68)
        .logo
            filter: invert(1) grayscale(1) brightness(100)
        .search-box input
            border-color rgb(68, 68, 68) !important
            background: #333 url(/assets/img/search.83621669.svg) 0.6rem 0.5rem no-repeat !important
            color rgb(221, 221, 221)
        .ds-dropdown-menu
            filter: invert() brightness(3) grayscale()

    .nav-item a, .nav-link, .dropdown-wrapper .title, .dropdown-wrapper .arrow, .dropdown-item
        color rgb(221, 221, 221) !important
    .dropdown-subitem a:hover
        color #ff6600 !important

    .nav-item > a:hover, .nav-item > a.router-link-active
        color rgb(221, 221, 221) !important
            
    .dropdown-wrapper .nav-dropdown
        background-color rgba(0, 0, 0, 0.9) !important
        border-color rgb(68, 68, 68) !important
        h4
            border-top-color rgb(68, 68, 68) !important

    .sidebar
        background-color rgb(0, 0, 0) !important
        border-right 1px solid rgb(68, 68, 68) !important
        .sidebar-link, .sidebar-heading
            color #a6a6a6
        .page-versions .dropdown-title
            border-color rgb(68, 68, 68) !important
            color rgb(221, 221, 221)
        .nav-item .mobile-dropdown-title
            color rgb(221, 221, 221) !important
        .current
            color rgb(221, 221, 221) !important
            &:hover
                color #fff !important

    .page
        table, th, td
            border-color rgb(68, 68, 68) !important
        tr:nth-child(2n)
            background-color #000
        h2
            border-color rgb(68, 68, 68) !important
        code
            color #f7f7f7
            background-color: rgb(47 53 60);
        .custom-block.warning
            background-color rgba(127, 114, 50, 0.2) !important
            color #e7c000
            a
                color rgb(221, 221, 221)
        .custom-block.tip
            background-color rgba(13, 25, 35, 0.6) !important
        .custom-block.details
            background-color rgb(32, 32, 32) !important

    .os-tab, .distro-tab, .version-tab
        &:hover
            background rgb(32, 32, 32) !important
        &.selected
            border-color rgb(128, 96, 68) !important
        img
            filter invert() grayscale() brightness(100) opacity(0.8) !important

    .jumbotron, .page-header, .blogindex-header, .post-header
        background-color #000 !important
        border-bottom 1px solid rgb(32, 32, 32) !important

    .posts-list .post-frame, .topics .topic
        border-color rgb(68, 68, 68) !important
        background-color rgb(24, 24, 24) !important
        color rgb(221, 221, 221) !important
        .topic-link
            color rgb(221, 221, 221) !important

    kbd
        border-color rgb(68, 68, 68) !important
        background-color rgb(24, 24, 24) !important

    footer
        background black !important
        border-top none !important
        
        .legal a
            color #aaa !important

    .homepage
        .hero-image
            background url(/hero3-dark.jpg) bottom 0 left 50%/contain no-repeat !important

        .section2
            background rgb(17, 17, 17)
            .gears, .home-icon
                filter invert()
            .feature h3
                color rgb(221, 221, 221)
            p
                color #aaa !important
            a
                color #fff
        .cloud-section
            filter invert()
            h2
                color #0 !important
            p
                color #0 !important
        .featured-addons-section
            background #fff
            h2
                color #222
            .all-addons-button
                color #000
                border-color #000
                &:hover
                    background-color #000
                    color #fff


        .community
            filter invert()
            .community-stat
                color #555
            .join-us-button:hover
                color #000 !important
            h2
                color #555
        .tweets
            background rgb(21, 32, 43)
        .alternativeto-banner
            background-image linear-gradient(#2c4961,#222222) !important
    
    .addons .addon
        background #fff
    .addon-logo
        background-color #fff
    .display-mode-toggle
        button
            background inherit !important
        button[disabled]
            background #f60 !important
    .addon-search .filter
        background #232123 url(/assets/img/search.83621669.svg) .7rem 1rem no-repeat !important
        border 1px solid #444
        color rgb(221, 221, 221)

    .post-cover
        background-color rgba(127,51,0,.667) !important

